Atualização do Portfólio
Adição de novos projetos.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erick Silva | Portfólio</title>
 
-    <!-- favicon -->
-    <link rel="shortcut icon" href="images/elarssen_logo_principal_white.png" type="image/png">
-
     <!-- swiper css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 
@@ -18,6 +15,9 @@
 
     <!-- custom css -->
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- favicon -->
+    <link rel="shortcut icon" href="images/elarssen_logo_principal_white.png" type="image/x-icon">
 </head>
 
 <body>
@@ -47,7 +47,7 @@
             <p>
                 Eu sou um designer gráfico, desenvolvedor full-stack, editor de vídeo com especialização em Motion
                 Graphics e animador 2D/3D de Diadema-SP. Com 29 anos, uni design e programação para criar soluções
-                únicas. Na 'Elarssen Design,' transformo ideias em realidade com criatividade e dedicação.
+                únicas. Na Elarssen Design e Elarssen Code Solutions, transformo ideias em realidade com criatividade e dedicação.
             </p>
 
             <div class="social-media">
